--- a/Unit1/1-05/css/style2.css
+++ b/Unit1/1-05/css/style2.css
@@ -1,17 +1,19 @@
 #myheader{
-  background-color: lightblue;
-  color: black;
+  background-color: rgb(0, 13, 134);
+  color: rgb(43, 0, 255);
   padding:40px;
   text-align: center;
 }
 
 .city{ 
-  background-color: tomato;
-  color: white;
+  background-color: rgb(50, 1, 102);
+  color: rgb(12, 37, 255);
   padding: 10px;
 }
 
 body{
-  background-color: green;
-
+  background-color: rgb(0, 95, 159);
+}
+p{
+  background-color: blueviolet;
 }
