--- a/Unit1/1-09/style.css
+++ b/Unit1/1-09/style.css
@@ -5,11 +5,24 @@ body {
 div.kk {
   position: relative;
   left: 330px;
-  bottom: 188px;
+  bottom: 110px;
 
 
 }
+div.coll{
+  scale:150%;
+position:relative;
+left:500px;
+bottom: 100px;
+}
 
+
+
+
+div.all{
+  position: relative;
+  left: 20px;
+}
 
 div.lk {
   position: relative;
@@ -26,11 +39,3 @@ div.ak {
 }
 
 
-div.ck {
-
-  position: relative;
-  left: 700px;
-  bottom: 200px;
-
-
-}
