fixed the text field and search button

--- a/Unit1/Final/css/style.css
+++ b/Unit1/Final/css/style.css
@@ -47,7 +47,10 @@ p{
 
 div.text{
     color: azure;
-    text-align: center;
+    position:fixed;
+    left:850px;
+
+
 }
 div.button{
     position: fixed;
