--- a/Unit1/Final/css/style.css
+++ b/Unit1/Final/css/style.css
@@ -91,8 +91,8 @@ div.box3 {
     border-radius: 10px;
     width: 800px;
     height: 500px;
-    position: fixed;
-    left: 1100px;
     position: absolute;
-    bottom: -400px;
+    left: 1100px;
+    position: relative;
+    bottom: -100px;
   }
