adde some more boxes and moved the button around a lilte

--- a/Unit1/Final/css/style.css
+++ b/Unit1/Final/css/style.css
@@ -55,7 +55,7 @@ div.text{
 div.button{
   position: fixed;
   left: 1200px;
-  bottom: 690px;
+  bottom: 750px;
 }
 
 .box1{
@@ -130,7 +130,7 @@ div.box3 {
   border: solid;
   border-width: 10;
   border-radius: 10px;
-  width: 140px;
+  width: 160px;
   height: 200px;
   position: absolute;
   left: 580px;
@@ -146,3 +146,14 @@ h3{
 ol{
   color: azure;
   text-align: left;}
+
+#storeheading{
+  color:azure ;
+  position:absolute;
+  left: 520px;
+  }
+
+
+     input[type="text"] {
+       color: azure;
+     }
