--- a/Unit1/Final/css/style.css
+++ b/Unit1/Final/css/style.css
@@ -193,3 +193,24 @@ input[type="text"] {
   top: 200px;
   scale: 200%;
 }
+
+.boxforme {
+  background-color: rgb(117, 112, 112);
+  border: solid;
+  border-width: 10;
+  border-radius: 10px;
+  width: 800px;
+  height: 500px;
+  position: absolute;
+  left: 10px;
+  position: relative;
+  bottom: 400px;
+}
+
+ #bodyproblem{
+  position: absolute;
+    left: 250px;
+    top:180px;
+    scale: 180%;
+
+  }
